css/styles.css
/* ... */
.help-btn.process{
    margin-top: 30px;
}
.modal-content{
    height: 100%;
}
.modal-header{
    height: 55px;
    border-bottom: none;
}
.modal-footer{
    height: 65px;
    border-top: none;
}
.modal-body{
    height: calc(100% - 120px);
    overflow-y: scroll;
}
#videoModal .modal-body{
    overflow-y: hidden;
}
.panel-group .panel{
    border-radius: 0px;
}
.panel-group .panel:first-child {
    border-radius: 4px 4px 0px 0px;
}
.panel-group .panel:last-child {
    border-radius: 0px 0px 4px 4px;
}
.panel-group .panel+.panel {
    margin-top: 0px;
}
.panel-title{
    line-height: 20px;
}
.trans-text{
    margin-top: 0px;
    color: #0097dc;
}
.trans-number{
    display: block;
    margin: 0px auto 20px auto;
    background-color: #ebebeb;
    width: 200px;
    color: #0097dc;
    border-radius: 6px;
    padding: 7px 0px;
    font-size: 27px;
}
footer .container{
    font-size: 14px;
}
footer p{
    text-align: center;
    font-size: 12px;
    letter-spacing: 0.5px;
}
footer ul{
    text-align: center;
    margin-top: 0px;
    font-size: 12px;
    letter-spacing: 0.5px;
}
footer a{
    text-decoration: none;
    color: whitesmoke;
}
footer a:hover{
    text-decoration: underline;
    color: whitesmoke;
}
@media(min-width: 768px){
    h1{
        text-align: left;
        margin-top: 20px;
    }
    h1 img{
        height: auto;
    }
    .modal-dialog{
        width: 80%;
    }
    .process-list li{
        text-align: left;
        padding: 0 9% 0 0;
    }
    .process-list p{
        margin-bottom: 0px;
    }
    .single-list .require-process{
        padding: 0px;
        vertical-align: middle;
        display: table-cell;
        text-align: left;
    }
    .single-list .img-holder{
        display: table-cell;
        width: 152px;
        text-align: left;
    }
    .thank-you{
        text-align: left;
        margin-top: 30px;
        margin-bottom: 40px;
    }
    #user-form {
        padding: 20px 4px 4px 13px;
        border-radius: 4px;
        margin-left: 0px;
        margin-right: 0px;
    }
    #user-form .form-group .error-feedback {
        margin-left: 33%;
    }
    #user-form .col-sm-3.control-label{
        width: 30%;
    }
    #user-form .col-sm-offset-3.col-sm-8.input-holder{
        margin-left: 30%;
    }
    #user-form .col-sm-8.input-holder{
        width: 60%;
    }
    #inputStreet{
        width: 60%;
    }
    #user-form .col-sm-3.control-label.str-no{
        width: 21%;
        margin-top: 0px;
    }
    #inputStrtNo{
        width: 19%;
    }
    #user-form .col-sm-3.control-label.city{
        margin-left: -145px;
    }
    #inputCity {
        margin-top: -26px;
    }
    #tan-form .input-group{
        padding-top: 0px;
        max-width: inherit;
        width: 230px; /*for solving a padding issue in galaxy tab*/
    }
    #tan-form .submit-form{
        margin-left: 0px;
        margin-bottom: 0px;
    }
    #start-telephony .glyphicon-triangle-right{
        margin-left: 0px;
    }
    footer p{
        text-align: left;
        float: left;
    }
    footer ul{
        text-align: right;
        float: right;
    }
}
@media(min-width: 992px){
    #user-form .form-group .error-feedback {
        margin-left: 27.5%;
    }
    #user-form .col-sm-3.control-label{
        width: 25%;
    }
    #user-form .col-sm-offset-3.col-sm-8.input-holder{
        margin-left: 25%;
    }
    #user-form .col-sm-8.input-holder{
        width: 57%;
    }
    #user-form .dob-input{
        width: 22%;
    }
    #inputStreet{
        width: 63%;
    }
    #user-form .col-sm-3.control-label.str-no{
        width: 18%;
    }
    #inputPostal{
        width: 30%;
    }
    #user-form .col-sm-3.control-label.city{
        margin-left: auto;
        width: 18%;
        margin-top: 0px;
        text-align: right;
        padding-right: 10px;
    }
    #inputCity{
        width: 52%;
        margin-top: auto;
    }
}
@media(min-width: 1200px){
    #user-form .form-group .error-feedback {
        margin-left: 24%;
    }
    #user-form .col-sm-3.control-label{
        width: 22%;
    }
    #user-form .col-sm-offset-3.col-sm-8.input-holder{
        margin-left: 22%;
    }
    #user-form .col-sm-8.input-holder{
        width: 60%;
    }
    #user-form .dob-input{
        width: 17%;
    }
    #inputStreet{
        width: 67%;
    }
    #user-form .col-sm-3.control-label.str-no{
        width: 14%;
    }
    #user-form .col-sm-3.control-label.city{
        width: 15%;
    }
    #inputCity{
        width: 55%;
    }
    /*uncomment the following to manipulate content width*/
    /*.container{
        width: 1000px;
    }*/
}

